<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="@string/search_hint"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_reports"
        android:title="@string/reports_and_insights"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort"
        android:title="@string/sort_by"
        app:showAsAction="never">
        <menu>
            <item android:id="@+id/sort_name" android:title="@string/sort_by_name" />
            <item android:id="@+id/sort_price_low" android:title="@string/sort_by_price" />
            <item android:id="@+id/sort_price_high" android:title="@string/sort_by_price_high" />
            <item android:id="@+id/sort_date" android:title="@string/sort_by_date" />
        </menu>
    </item>
    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>
